@@ -37,8 +37,9 @@ Isar declaration attributes to access these.
   Thy_Output.break          thy_output_break
 
   show_question_marks       show_question_marks
+  show_consts               show_consts
 
-Note that the corresponding "..._default" references may be only
+Note that the corresponding "..._default" references in ML may be only
 changed globally at the ROOT session setup, but *not* within a theory.
 
 
